# trip

./: Cargo.toml  README.md  install.sh
src/: cli.rs  common.rs  main.rs
src/client/: attach.rs  launch.rs  mod.rs  wrap.rs
src/daemon/: agent.rs  diff.rs  mod.rs  procinfo.rs  protocol.rs  recording.rs  session.rs
